kubernetes/torrent/jackett/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier-jackett
  namespace: torrent
spec:
  plugin:
    sablier:
      group: qbittorrent
      # blocking:
      #   defaultTimeout: 10s
      dynamic:
        displayName: Jackett
        refreshFrequency: 5s
        showDetails: "true"
        theme: shuffle
      sablierUrl: http://sablier:10000
      sessionDuration: 30m
