kubernetes/torrent/jackett/jackett.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: torrent
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      priorityClassName: torrent-priority
      # NonEssential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/nonessential
                operator: In
                values:
                - "true"
      volumes:
        - name: jackett-config-volume
          persistentVolumeClaim:
            claimName: jackett-config-claim
      containers:
      - name: jackett
        image: linuxserver/jackett
        ports:
        - name: http
          containerPort: 9117
        volumeMounts:
          - name: jackett-config-volume
            mountPath: /config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett
  name: jackett
  namespace: torrent
spec:
  ports:
  - name: http
    targetPort: 9117
    port: 80
  selector:
    app: jackett
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-https
  namespace: torrent
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "torrent-sablier-jackett@kubernetescrd"
    traefik.ingress.kubernetes.io/forwarded-headers-trustedips: "10.244.0.0/16"
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  tls:
  - secretName: jackett-bas-tls
  rules:
  - host: jackett.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 80
